--- a/index.html
+++ b/index.html
@@ -6,106 +6,27 @@
 <title>TEST BAHASA KOREA</title>
 
 <style>
-/* ANIMASI & BODY - Mirip Koka */
-@keyframes fadeIn {
-  from { opacity: 0; transform: translateY(20px); }
-  to   { opacity: 1; transform: translateY(0); }
-}
-html, body {
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-}
-body {
-  font-family: 'Segoe UI', system-ui, Arial, sans-serif;
-  min-height: 100vh;
-  background: url('https://raw.githubusercontent.com/airnetcso/eps/main/image/bg1.jpg') no-repeat center center fixed;
-  background-size: cover;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding: 20px;
-  color: #fff;
-  position: relative;
-}
-body::before {
-  content: '';
-  position: absolute;
-  inset: 0;
-  background: rgba(0, 0, 0, 0.3);
-  z-index: 1;
-}
+body{margin:0;font-family:'Segoe UI',Arial;background:#f5f5f5}
 
-/* LOGIN PAGE - Mirip persis Koka, class baru .login-box biar nggak bentrok */
-.login-box {
-  position: relative;
-  z-index: 2;
-  width: 80%;
-  max-width: 440px;
-  background: rgba(255,255,255,0.15);
-  backdrop-filter: blur(14px);
-  -webkit-backdrop-filter: blur(14px);
-  border-radius: 24px;
-  padding: 40px 30px;
-  box-shadow: 0 15px 40px rgba(0,0,0,0.35);
-  border: 1px solid rgba(255,255,255,0.18);
-  animation: fadeIn 0.8s ease-out;
-  margin-top: -100px;
-  text-align: center;
+/* LOGIN */
+#login-page{
+ min-height:100vh;
+ display:flex;
+ justify-content:center;
+ align-items:center;
+ background:linear-gradient(rgba(0,0,0,.6),rgba(0,0,0,.6)),
+ url('https://raw.githubusercontent.com/airnetcso/eps/main/image/bg1.jpg') center/cover no-repeat;
 }
-.login-box h1 {
-  font-size: 32px;
-  margin: 0 0 10px;
-  color: #fff;
-  font-weight: 700;
-  text-shadow: 0 2px 8px rgba(0,0,0,0.6);
+.login-container{
+ width:90%;max-width:280px;padding:35px;text-align:center;
+ background:rgba(255,255,255,.12);
+ backdrop-filter:blur(6px);
 }
-.login-box p {
-  margin: 0 0 30px;
-  font-size: 18px;
-}
-.login-box input {
-  width: 100%;
-  padding: 16px;
-  margin: 14px 0;
-  font-size: 18px;
-  border: 2px solid rgba(255,255,255,0.4);
-  border-radius: 12px;
-  box-sizing: border-box;
-  background: rgba(255,255,255,0.12);
-  color: white;
-  transition: all 0.3s ease;
-}
-.login-box input::placeholder {
-  color: rgba(255,255,255,0.7);
-}
-.login-box input:focus {
-  border-color: #fff;
-  background: rgba(255,255,255,0.22);
-  outline: none;
-  box-shadow: 0 0 0 4px rgba(255,255,255,0.15);
-}
-.login-box button {
-  width: 100%;
-  padding: 16px;
-  margin: 16px 0 8px;
-  font-size: 20px;
-  font-weight: bold;
-  border: none;
-  border-radius: 12px;
-  color: white;
-  cursor: pointer;
-  background: linear-gradient(90deg, #10b981, #059669); /* Hijau seperti koka */
-  transition: all 0.3s ease;
-}
-.login-box button:hover {
-  transform: translateY(-3px);
-  box-shadow: 0 12px 25px rgba(16,185,129,0.4);
-}
+.login-container h1,.login-container p{color:#fff}
+input{width:88%;padding:14px;margin:10px 0}
+button{width:100%;padding:16px;background:#3f51b5;color:#fff;border:none;font-weight:bold}
 
-/* QUIZ & RESULT - Tetap PERSIS seperti baseline (nggak diubah) */
+/* QUIZ */
 #quiz-page{display:none;min-height:100vh;padding:70px 0;background:linear-gradient(#fdf6ec,#f7efe2)}
 .header-fixed{
  position:fixed;top:0;width:100%;display:flex;gap:6px;
@@ -114,12 +35,16 @@ body::before {
 .timer,.submit-top{flex:1;padding:12px 0;text-align:center;color:#fff;font-weight:bold}
 .timer{background:#4caf50}
 .submit-top{background:#f44336}
+
 .container{max-width:540px;margin:auto;height:calc(100vh - 140px);overflow:auto}
 .question-wrapper{display:none;margin-bottom:30px}
 .question-wrapper.active{display:block}
+
 .box-passage{background:#e3f2fd;padding:20px;border:2px solid #bbdefb}
 .box-passage audio,.box-passage img{width:100%;margin-top:10px}
+
 .box-question{background:#fff3e0;padding:20px;border:2px solid #ffcc80}
+
 .options{margin-top:15px}
 .option-item{display:flex;align-items:flex-start;margin:12px 0}
 .option-item input{display:none}
@@ -128,6 +53,7 @@ body::before {
  display:flex;align-items:center;justify-content:center;margin-right:10px
 }
 .option-item input:checked + .option-circle{background:#bbdefb}
+
 .nav-bottom{
  position:fixed;bottom:0;width:100%;display:flex;gap:6px;
  background:#fff;padding:6px
@@ -135,6 +61,8 @@ body::before {
 .nav-bottom button{flex:1;padding:12px;color:#fff;border:none;font-weight:bold}
 #prev{background:#2196f3}
 #next{background:#ff9800}
+
+/* RESULT */
 #result-page{display:none;max-width:600px;margin:auto;padding:20px}
 .result-box{background:#fff;border:2px solid #ddd;padding:20px}
 .wrong-item{
@@ -151,19 +79,18 @@ body::before {
 
 <body>
 
-<!-- LOGIN PAGE - Mirip persis Koka, class baru .login-box -->
-<div class="login-box" id="login-page">
-  <h1>LATIHAN SOAL</h1>
-  <h1>한국어연습</h1>
-  <p>25 Soal | 50 Menit</p>
-  <input id="username" placeholder="Username / 이름" autocomplete="off">
-  <input id="password" type="password" placeholder="Password / 비밀번호" autocomplete="off">
-  <input id="kode" placeholder="Kode Soal / 시험코드" autocomplete="off">
-  <div class="error" id="errorMsg"></div>
-  <button id="btnLogin">LOGIN / 로그인</button>
+<div id="login-page">
+ <div class="login-container">
+ <h1>LATIHAN SOAL</h1>
+ <h1>한국어연습</h1>
+ <p>25 Soal | 50 Menit</p>
+ <input id="username" placeholder="Username / 이름">
+ <input id="password" type="password" placeholder="Password / 비밀번호">
+ <input id="kode" placeholder="Kode Soal / 시험코드">
+ <button id="btnLogin">LOGIN / 로그인</button>
+ </div>
 </div>
 
-<!-- QUIZ PAGE (tetap seperti baseline) -->
 <div id="quiz-page">
  <div class="header-fixed">
  <div class="submit-top" id="submitTop">SUBMIT</div>
@@ -176,14 +103,12 @@ body::before {
  </div>
 </div>
 
-<!-- RESULT PAGE -->
 <div id="result-page">
  <div class="result-box" id="resultBox"></div>
 </div>
 
 <script>
 document.addEventListener("DOMContentLoaded",()=>{
-
 const loginPage=document.getElementById("login-page");
 const quizPage=document.getElementById("quiz-page");
 const resultPage=document.getElementById("result-page");
@@ -200,8 +125,11 @@ const validCredentials={
  "Hamdan106":"Fukuo106","koreafan":"hanguk789","topik2026":"seoul2026"
 };
 const kodeMapping={
- "B12345":"soal1.json","A09008":"soal2.json","SAREWAE":"test.json",
- "W11765":"soal3.json","H66633":"soal5.json"
+ "B12345":"soal1.json",
+ "A09008":"soal2.json",
+ "SAREWAE":"test.json",
+ "W11765":"soal3.json",
+ "H66633":"soal5.json"
 };
 const BASE="https://raw.githubusercontent.com/airnetcso/latbakor/main/soal/";
 
@@ -291,13 +219,13 @@ submitTop.onclick=()=>{
 
  let allResults = JSON.parse(localStorage.getItem("quizResults") || "[]");
 
- // Check duplikat lebih ketat
+ // Check duplikat lebih ketat (termasuk waktu submit)
  const isDuplicate = allResults.some(r => 
   r.username === resultData.username &&
   r.kode === resultData.kode &&
   r.nilai === resultData.nilai &&
   r.app === resultData.app &&
-  Math.abs(new Date(r.tanggal) - new Date(resultData.tanggal)) < 60000
+  Math.abs(new Date(r.tanggal) - new Date(resultData.tanggal)) < 60000 // kurang dari 1 menit
  );
 
  if (!isDuplicate) {
