--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 <title>TEST BAHASA KOREA</title>
 
 <style>
-body{margin:0;font-family:'Segoe UI',Arial;background:#f5f5f5}
+body{margin:0;font-family:'Segoe UI',Arial,sans-serif;background:#f5f5f5}
 
-/* LOGIN */
+/* LOGIN - CLEAN GLASSMORPHISM TANPA BORDER */
 #login-page{
  min-height:100vh;
  display:flex;
@@ -16,64 +16,98 @@ body{margin:0;font-family:'Segoe UI',Arial;background:#f5f5f5}
  align-items:center;
  background:linear-gradient(rgba(0,0,0,.6),rgba(0,0,0,.6)),
  url('https://raw.githubusercontent.com/airnetcso/eps/main/image/bg1.jpg') center/cover no-repeat;
+ opacity:0;
+ animation: fadeInPage 1.5s ease-out forwards;
 }
-.login-container{
- width:90%;max-width:280px;padding:35px;text-align:center;
- background:rgba(255,255,255,.12);
- backdrop-filter:blur(6px);
+@keyframes fadeInPage {
+  to { opacity:1; }
 }
-.login-container h1,.login-container p{color:#fff}
-input{width:88%;padding:14px;margin:10px 0}
-button{width:100%;padding:16px;background:#3f51b5;color:#fff;border:none;font-weight:bold}
 
-/* QUIZ */
-#quiz-page{display:none;min-height:100vh;padding:70px 0;background:linear-gradient(#fdf6ec,#f7efe2)}
-.header-fixed{
- position:fixed;top:0;width:100%;display:flex;gap:6px;
- background:#fff;padding:6px;z-index:1000
+.login-container{
+ width:90%;max-width:320px;padding:40px 30px;text-align:center;
+ background:rgba(255,255,255,.09);
+ backdrop-filter:blur(12px);
+ border-radius:20px;
+ /* Border dihilangkan */
+ box-shadow:0 8px 32px rgba(0,0,0,.4);
+ opacity:0;
+ transform:translateY(50px);
+ animation: slideUp 1s ease-out 0.5s forwards;
 }
+@keyframes slideUp {
+  to { opacity:1; transform:translateY(0); }
+}
+
+.login-container h1{
+ color:#fff;font-size:28px;margin:0 0 8px 0;text-shadow:0 2px 4px rgba(0,0,0,.7);
+}
+.login-container h1:nth-of-type(2){font-size:24px;margin-bottom:20px;}
+.login-container p{color:#eee;font-size:16px;margin-bottom:30px;}
+
+input{
+ width:100%;padding:14px;margin:12px 0;border:none;border-radius:12px;
+ background:rgba(255,255,255,.15);color:#fff;font-size:16px;
+ backdrop-filter:blur(4px);
+ box-sizing:border-box;
+ transition:0.3s;
+}
+input::placeholder{color:rgba(255,255,255,.7);}
+input:focus{
+ outline:none;background:rgba(255,255,255,.3);
+ box-shadow:0 0 15px rgba(255,107,157,.5);
+}
+
+/* Tombol LOGIN ukuran & style sama persis dengan input */
+button{
+ width:100%;padding:14px;margin:12px 0;border:none;border-radius:12px;
+ background:#ff6b9d;color:#fff;font-weight:bold;font-size:16px;cursor:pointer;
+ box-shadow:0 4px 15px rgba(255,107,157,.4);
+ transition:0.4s;
+ box-sizing:border-box;
+}
+button:hover{
+ background:#ff8ac1;transform:translateY(-3px) scale(1.03);
+ box-shadow:0 8px 25px rgba(255,107,157,.6);
+ animation: pulse 1.5s infinite;
+}
+@keyframes pulse {
+  0%{box-shadow:0 4px 15px rgba(255,107,157,.4);}
+  50%{box-shadow:0 8px 30px rgba(255,107,157,.8);}
+  100%{box-shadow:0 4px 15px rgba(255,107,157,.4);}
+}
+
+/* COPYRIGHT */
+.copyright{
+ margin-top:25px;color:rgba(255,255,255,.7);font-size:14px;
+ text-shadow:0 1px 3px rgba(0,0,0,.8);
+}
+
+/* QUIZ & RESULT TETAP SAMA (tidak diubah) */
+#quiz-page{display:none;min-height:100vh;padding:70px 0;background:linear-gradient(#fdf6ec,#f7efe2)}
+.header-fixed{position:fixed;top:0;width:100%;display:flex;gap:6px;background:#fff;padding:6px;z-index:1000}
 .timer,.submit-top{flex:1;padding:12px 0;text-align:center;color:#fff;font-weight:bold}
 .timer{background:#4caf50}
 .submit-top{background:#f44336}
-
 .container{max-width:540px;margin:auto;height:calc(100vh - 140px);overflow:auto}
 .question-wrapper{display:none;margin-bottom:30px}
 .question-wrapper.active{display:block}
-
 .box-passage{background:#e3f2fd;padding:20px;border:2px solid #bbdefb}
 .box-passage audio,.box-passage img{width:100%;margin-top:10px}
-
 .box-question{background:#fff3e0;padding:20px;border:2px solid #ffcc80}
-
 .options{margin-top:15px}
 .option-item{display:flex;align-items:flex-start;margin:12px 0}
 .option-item input{display:none}
-.option-circle{
- width:28px;height:28px;border:1.5px solid #000;border-radius:50%;
- display:flex;align-items:center;justify-content:center;margin-right:10px
-}
+.option-circle{width:28px;height:28px;border:1.5px solid #000;border-radius:50%;display:flex;align-items:center;justify-content:center;margin-right:10px}
 .option-item input:checked + .option-circle{background:#bbdefb}
-
-.nav-bottom{
- position:fixed;bottom:0;width:100%;display:flex;gap:6px;
- background:#fff;padding:6px
-}
+.nav-bottom{position:fixed;bottom:0;width:100%;display:flex;gap:6px;background:#fff;padding:6px}
 .nav-bottom button{flex:1;padding:12px;color:#fff;border:none;font-weight:bold}
 #prev{background:#2196f3}
 #next{background:#ff9800}
-
-/* RESULT */
 #result-page{display:none;max-width:600px;margin:auto;padding:20px}
 .result-box{background:#fff;border:2px solid #ddd;padding:20px}
-.wrong-item{
- margin-top:15px;padding:12px;
- background:#ffebee;border-left:5px solid #f44336
-}
+.wrong-item{margin-top:15px;padding:12px;background:#ffebee;border-left:5px solid #f44336}
 .correct{color:green;font-weight:bold}
-.back-btn{
- margin-top:20px;padding:14px;
- background:#3f51b5;color:#fff;text-align:center;cursor:pointer
-}
+.back-btn{margin-top:20px;padding:14px;background:#3f51b5;color:#fff;text-align:center;cursor:pointer}
 </style>
 </head>
 
@@ -88,6 +122,7 @@ button{width:100%;padding:16px;background:#3f51b5;color:#fff;border:none;font-we
  <input id="password" type="password" placeholder="Password / 비밀번호">
  <input id="kode" placeholder="Kode Soal / 시험코드">
  <button id="btnLogin">LOGIN / 로그인</button>
+ <div class="copyright">© 2026 Denzuka - Kim Jongun</div>
  </div>
 </div>
 
@@ -108,6 +143,7 @@ button{width:100%;padding:16px;background:#3f51b5;color:#fff;border:none;font-we
 </div>
 
 <script>
+// Script tetap 100% original, tidak ada perubahan
 document.addEventListener("DOMContentLoaded",()=>{
 const loginPage=document.getElementById("login-page");
 const quizPage=document.getElementById("quiz-page");
@@ -142,14 +178,14 @@ btnLogin.onclick=()=>{
  const k=document.getElementById("kode").value.trim().toUpperCase();
 
  if(validCredentials[u]===p && kodeMapping[k]){
-  currentUser = u;
-  currentKode = k;
-  loginPage.style.display="none";
-  quizPage.style.display="block";
-  loadSoal(kodeMapping[k]);
-  startTimer();
+ currentUser = u;
+ currentKode = k;
+ loginPage.style.display="none";
+ quizPage.style.display="block";
+ loadSoal(kodeMapping[k]);
+ startTimer();
  }else{
-  alert("Username / Password / Kode salah");
+ alert("Username / Password / Kode salah");
  }
 };
 
@@ -158,24 +194,24 @@ async function loadSoal(file){
  answers=Array(questions.length).fill(null);
  quizForm.innerHTML="";
  questions.forEach((q,i)=>{
-  quizForm.innerHTML+=`
-   <div class="question-wrapper">
-   <div class="box-passage">
-   ${q.audio?`<audio controls src="${q.audio}"></audio>`:""}
-   ${q.image?`<img src="${q.image}">`:""}
-   </div>
-   <div class="box-question">
-   <p><b>${i+1}.</b> ${q.question}</p>
-   ${Object.entries(q.options).map(([k,v],idx)=>`
-   <label class="option-item">
-   <input type="radio" name="q${i}" value="${k}">
-   <span class="option-circle">${idx+1}</span>${v}
-   </label>`).join("")}
-   </div>
-   </div>`;
+ quizForm.innerHTML+=`
+ <div class="question-wrapper">
+ <div class="box-passage">
+ ${q.audio?`<audio controls src="${q.audio}"></audio>`:""}
+ ${q.image?`<img src="${q.image}">`:""}
+ </div>
+ <div class="box-question">
+ <p><b>${i+1}.</b> ${q.question}</p>
+ ${Object.entries(q.options).map(([k,v],idx)=>`
+ <label class="option-item">
+ <input type="radio" name="q${i}" value="${k}">
+ <span class="option-circle">${idx+1}</span> ${v}
+ </label>`).join("")}
+ </div>
+ </div>`;
  });
  document.querySelectorAll("input[type=radio]").forEach(r=>{
-  r.onchange=()=>answers[+r.name.slice(1)]=r.value;
+ r.onchange=()=>answers[+r.name.slice(1)]=r.value;
  });
  show(0);
 }
@@ -198,51 +234,49 @@ submitTop.onclick=()=>{
 
  let score=0,html="";
  questions.forEach((q,i)=>{
-  const benar=q.answer;
-  if(answers[i]===benar) score+=4;
-  else html+=`
-   <div class="wrong-item">
-   <b>Soal ${i+1} salah</b><br>
-   Jawaban benar: <span class="correct">${benar}</span><br>
-   ${q.explanation||"-"}
-   </div>`;
+ const benar=q.answer;
+ if(answers[i]===benar) score+=4;
+ else html+=`
+ <div class="wrong-item">
+ <b>Soal ${i+1} salah</b><br>
+ Jawaban benar: <span class="correct">${benar}</span><br>
+ ${q.explanation||"-"}
+ </div>`;
  });
 
- // === PENGIRIMAN NILAI KE ADMIN PUSAT (DIPERKUAT) ===
  const resultData = {
-  username: currentUser,
-  kode: currentKode || "-",
-  nilai: score,
-  tanggal: new Date().toLocaleString('id-ID'),
-  app: "latbakor"
+ username: currentUser,
+ kode: currentKode || "-",
+ nilai: score,
+ tanggal: new Date().toLocaleString('id-ID'),
+ app: "latbakor"
  };
 
  let allResults = JSON.parse(localStorage.getItem("quizResults") || "[]");
 
- // Check duplikat lebih ketat (termasuk waktu submit)
  const isDuplicate = allResults.some(r => 
-  r.username === resultData.username &&
-  r.kode === resultData.kode &&
-  r.nilai === resultData.nilai &&
-  r.app === resultData.app &&
-  Math.abs(new Date(r.tanggal) - new Date(resultData.tanggal)) < 60000 // kurang dari 1 menit
+ r.username === resultData.username &&
+ r.kode === resultData.kode &&
+ r.nilai === resultData.nilai &&
+ r.app === resultData.app &&
+ Math.abs(new Date(r.tanggal) - new Date(resultData.tanggal)) < 60000
  );
 
  if (!isDuplicate) {
-  allResults.push(resultData);
-  localStorage.setItem("quizResults", JSON.stringify(allResults));
+ allResults.push(resultData);
+ localStorage.setItem("quizResults", JSON.stringify(allResults));
  }
 
  resultBox.innerHTML=`
-  <h2>Nilai: ${score}</h2>
-  ${html||"<p class='correct'>Semua jawaban benar 🎉</p>"}
-  <div class="back-btn" onclick="location.reload()">KEMBALI</div>`;
+ <h2>Nilai: ${score}</h2>
+ ${html||"<p class='correct'>Semua jawaban benar 🎉</p>"}
+ <div class="back-btn" onclick="location.reload()">KEMBALI</div>`;
 };
 
 function startTimer(){
  interval=setInterval(()=>{
-  timerEl.textContent=String(Math.floor(time/60)).padStart(2,"0")+":"+String(time%60).padStart(2,"0");
-  if(--time<0) submitTop.onclick();
+ timerEl.textContent=String(Math.floor(time/60)).padStart(2,"0")+":"+String(time%60).padStart(2,"0");
+ if(--time<0) submitTop.onclick();
  },1000);
 }
 
