--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ button:hover{
     <button id="btnLogin">LOGIN / 로그인</button>
     <!-- Copyright dipindah ke luar -->
   </div>
-  <div class="copyright">© 2026 Denzuka - Kim Jongun</div>
+  <div class="© 2026 Denzuka - Kim Jongun. All Rights Reserved.</div>
 </div>
 
 <div id="quiz-page">
@@ -278,3 +278,4 @@ function startTimer(){
 </script>
 </body>
 </html>
+
