--- a/index.html
+++ b/index.html
@@ -149,10 +149,45 @@ const timerEl=document.getElementById("timer");
 const resultBox=document.getElementById("resultBox");
 
 const validCredentials={
- "uus":"123","user01":"12345","hanarizka":"Nungkihana24!","user3":"12345","siswa01":"12345",
- "windi":"Windi2000","rismaya97":"bahasakorea","admin":"admin123","Fikrisurya":"464646",
- "Mutiara2003":"Mutiara14","sita77":"minyooki","Aini185":"Doraemon","Hangeulfei":"studykorea02",
- "Hamdan106":"Fukuo106","koreafan":"hanguk789","topik2026":"seoul2026"
+ "uus":"123",
+ "user01":"12345",
+ "hanarizka":"Nungkihana24!",
+ "windi","Windi2000",
+ "rismaya97","bahasakorea",
+ "sita77","minyooki",
+ "Aini185","Doraemon",
+ "Hangeulfei","studykorea02",
+ "Hamdan106","Fukuo106",
+ "Heri","heri99",
+	"hanarizka","Nungkihana24!",
+ "Fikrisurya","464646",
+ "Mutiara2003","Mutiara14",
+ "wantikas","200022",
+ "Dininidia","dininidia11",
+ "Hangeulfei","studykorea02",
+ "kaniarostayuni9","Kania1313",
+ "Dikisetiawan07","Diki2709",
+ "Aisyah18","Aisyah18.",
+ "Dininidia","dininidia11",
+ "Hangeulfei","studykorea02",
+ "Rizka2026","butterfly24",
+ "Zhafif07","20060722",
+ "Hangeulfei","studykorea02",
+ "Hamdan106","Fukuo106",
+ "Heri","heri99",
+ "user3":"12345",
+ "siswa01":"12345",
+ "windi":"Windi2000",
+ "rismaya97":"bahasakorea",
+ "admin":"admin123",
+ "Fikrisurya":"464646",
+ "Mutiara2003":"Mutiara14",
+ "sita77":"minyooki",
+ "Aini185":"Doraemon",
+ "Hangeulfei":"studykorea02",
+ "Hamdan106":"Fukuo106",
+ "koreafan":"hanguk789",
+ "topik2026":"seoul2026"
 };
 const kodeMapping={
  "B12345":"soal1.json",
@@ -278,3 +313,4 @@ function startTimer(){
 </script>
 </body>
 </html>
+
