--- a/index.html
+++ b/index.html
@@ -7,60 +7,57 @@
 <style>
 body{margin:0;font-family:'Segoe UI',Arial,sans-serif;background:#f5f5f5}
 
-/* LOGIN - STATIC, NO ANIMATION */
 #login-page{
- min-height:100vh;
- display:flex;
- flex-direction:column;
- justify-content:center;
- align-items:center;
- background:linear-gradient(rgba(0,0,0,.6),rgba(0,0,0,.6)),
- url('https://raw.githubusercontent.com/airnetcso/eps/main/image/bg1.jpg') center/cover no-repeat;
- /* Animasi fadeInPage dihilangkan */
+  min-height:100vh;
+  display:flex;
+  flex-direction:column;
+  justify-content:center;
+  align-items:center;
+  background:linear-gradient(rgba(0,0,0,.6),rgba(0,0,0,.6)),
+  url('https://raw.githubusercontent.com/airnetcso/eps/main/image/bg1.jpg') center/cover no-repeat;
 }
 
 .login-container{
- width:90%;
- max-width:280px;
- padding:40px 30px;
- text-align:center;
- background:rgba(255,255,255,.09);
- backdrop-filter:blur(12px);
- border-radius:20px;
- box-shadow:0 8px 32px rgba(0,0,0,.4);
- /* Animasi slideUp dihilangkan */
+  width:90%;
+  max-width:280px;
+  padding:40px 30px;
+  text-align:center;
+  background:rgba(255,255,255,.09);
+  backdrop-filter:blur(12px);
+  border-radius:20px;
+  box-shadow:0 8px 32px rgba(0,0,0,.4);
 }
 
 .login-container h1{
- color:#fff;font-size:28px;margin:0 0 8px 0;text-shadow:0 2px 4px rgba(0,0,0,.7);
+  color:#fff;font-size:28px;margin:0 0 8px 0;text-shadow:0 2px 4px rgba(0,0,0,.7);
 }
 .login-container h1:nth-of-type(2){font-size:24px;margin-bottom:20px;}
 .login-container p{color:#eee;font-size:16px;margin-bottom:30px;}
 
 input{
- width:100%;padding:14px;margin:12px 0;border:none;border-radius:12px;
- background:rgba(255,255,255,.15);color:#fff;font-size:16px;
- backdrop-filter:blur(4px);
- box-sizing:border-box;
- transition:0.3s;
+  width:100%;padding:14px;margin:12px 0;border:none;border-radius:12px;
+  background:rgba(255,255,255,.15);color:#fff;font-size:16px;
+  backdrop-filter:blur(4px);
+  box-sizing:border-box;
+  transition:0.3s;
 }
 input::placeholder{color:rgba(255,255,255,.7);}
 input:focus{
- outline:none;background:rgba(255,255,255,.3);
- box-shadow:0 0 15px rgba(255,107,157,.5);
+  outline:none;background:rgba(255,255,255,.3);
+  box-shadow:0 0 15px rgba(255,107,157,.5);
 }
 
 button{
- width:100%;padding:14px;margin:12px 0;border:none;border-radius:12px;
- background:#ff6b9d;color:#fff;font-weight:bold;font-size:16px;cursor:pointer;
- box-shadow:0 4px 15px rgba(255,107,157,.4);
- transition:0.4s;
- box-sizing:border-box;
+  width:100%;padding:14px;margin:12px 0;border:none;border-radius:12px;
+  background:#ff6b9d;color:#fff;font-weight:bold;font-size:16px;cursor:pointer;
+  box-shadow:0 4px 15px rgba(255,107,157,.4);
+  transition:0.4s;
+  box-sizing:border-box;
 }
 button:hover{
- background:#ff8ac1;transform:translateY(-3px) scale(1.03);
- box-shadow:0 8px 25px rgba(255,107,157,.6);
- animation: pulse 1.5s infinite;
+  background:#ff8ac1;transform:translateY(-3px) scale(1.03);
+  box-shadow:0 8px 25px rgba(255,107,157,.6);
+  animation: pulse 1.5s infinite;
 }
 @keyframes pulse {
   0%{box-shadow:0 4px 15px rgba(255,107,157,.4);}
@@ -68,15 +65,13 @@ button:hover{
   100%{box-shadow:0 4px 15px rgba(255,107,157,.4);}
 }
 
-/* COPYRIGHT - DIPINDAH KE LUAR BOX */
 .copyright{
- margin-top:30px;
- color:rgba(255,255,255,.7);
- font-size:14px;
- text-shadow:0 1px 3px rgba(0,0,0,.8);
+  margin-top:30px;
+  color:rgba(255,255,255,.7);
+  font-size:14px;
+  text-shadow:0 1px 3px rgba(0,0,0,.8);
 }
 
-/* QUIZ & RESULT - TETAP SAMA, TIDAK DIUBAH */
 #quiz-page{display:none;min-height:100vh;padding:70px 0;background:linear-gradient(#fdf6ec,#f7efe2)}
 .header-fixed{position:fixed;top:0;width:100%;display:flex;gap:6px;background:#fff;padding:6px;z-index:1000}
 .timer,.submit-top{flex:1;padding:12px 0;text-align:center;color:#fff;font-weight:bold}
@@ -101,7 +96,7 @@ button:hover{
 .result-box{background:#fff;border:2px solid #ddd;padding:20px}
 .wrong-item{margin-top:15px;padding:12px;background:#ffebee;border-left:5px solid #f44336}
 .correct{color:green;font-weight:bold}
-.back-btn{margin-top:20px;padding:14px;background:#3f51b5;color:#fff;text-align:center;cursor:pointer}
+.back-btn{margin-top:20px;padding:14px;background:#3f51b5;color:#fff;text-align:center;cursor:pointer;border-radius:12px}
 </style>
 </head>
 <body>
@@ -115,7 +110,6 @@ button:hover{
     <input id="password" type="password" placeholder="Password / 비밀번호">
     <input id="kode" placeholder="Kode Soal / 시험코드">
     <button id="btnLogin">LOGIN / 로그인</button>
-    <!-- Copyright dipindah ke luar -->
   </div>
   <div class="copyright">© 2026 Denzuka - Kim Jongun. All Rights Reserved.</div>
 </div>
@@ -137,180 +131,204 @@ button:hover{
 </div>
 
 <script>
-// Script 100% original, tidak ada perubahan sama sekali
-document.addEventListener("DOMContentLoaded",()=>{
-const loginPage=document.getElementById("login-page");
-const quizPage=document.getElementById("quiz-page");
-const resultPage=document.getElementById("result-page");
-const btnLogin=document.getElementById("btnLogin");
-const submitTop=document.getElementById("submitTop");
-const quizForm=document.getElementById("quiz-form");
-const timerEl=document.getElementById("timer");
-const resultBox=document.getElementById("resultBox");
+// ==================== URL GOOGLE SHEET (SUDAH DI-UPDATE) ====================
+const GOOGLE_SHEET_URL = "https://script.google.com/macros/s/AKfycbyfCZ5YNQHDLyKWatqj-diL8tXRRwXBKfJaaYMqcqoShABYy4Gx6QpexPOB_MkZwpIwLw/exec";
 
-const validCredentials={
- "uus":"123",
- "user01":"12345",
- "hanarizka":"Nungkihana24!",
- "windi","Windi2000",
- "rismaya97","bahasakorea",
- "sita77","minyooki",
- "Aini185","Doraemon",
- "Hangeulfei","studykorea02",
- "Hamdan106","Fukuo106",
- "Heri","heri99",
-	"hanarizka","Nungkihana24!",
- "Fikrisurya","464646",
- "Mutiara2003","Mutiara14",
- "wantikas","200022",
- "Dininidia","dininidia11",
- "Hangeulfei","studykorea02",
- "kaniarostayuni9","Kania1313",
- "Dikisetiawan07","Diki2709",
- "Aisyah18","Aisyah18.",
- "Dininidia","dininidia11",
- "Hangeulfei","studykorea02",
- "Rizka2026","butterfly24",
- "Zhafif07","20060722",
- "Hangeulfei","studykorea02",
- "Hamdan106","Fukuo106",
- "Heri","heri99",
- "user3":"12345",
- "siswa01":"12345",
- "windi":"Windi2000",
- "rismaya97":"bahasakorea",
- "admin":"admin123",
- "Fikrisurya":"464646",
- "Mutiara2003":"Mutiara14",
- "sita77":"minyooki",
- "Aini185":"Doraemon",
- "Hangeulfei":"studykorea02",
- "Hamdan106":"Fukuo106",
- "koreafan":"hanguk789",
- "topik2026":"seoul2026"
-};
-const kodeMapping={
- "B12345":"soal1.json",
- "A09008":"soal2.json",
- "SAREWAE":"test.json",
- "W11765":"soal3.json",
- "H66633":"soal5.json"
-};
-const BASE="https://raw.githubusercontent.com/airnetcso/latbakor/main/soal/";
-
-let questions=[],answers=[],current=0,time=3000,interval;
-let currentUser="", currentKode="";
-
-btnLogin.onclick=()=>{
- const u=document.getElementById("username").value.trim();
- const p=document.getElementById("password").value.trim();
- const k=document.getElementById("kode").value.trim().toUpperCase();
-
- if(validCredentials[u]===p && kodeMapping[k]){
- currentUser = u;
- currentKode = k;
- loginPage.style.display="none";
- quizPage.style.display="block";
- loadSoal(kodeMapping[k]);
- startTimer();
- }else{
- alert("Username / Password / Kode salah");
- }
-};
-
-async function loadSoal(file){
- questions=await (await fetch(BASE+file)).json();
- answers=Array(questions.length).fill(null);
- quizForm.innerHTML="";
- questions.forEach((q,i)=>{
- quizForm.innerHTML+=`
- <div class="question-wrapper">
- <div class="box-passage">
- ${q.audio?`<audio controls src="${q.audio}"></audio>`:""}
- ${q.image?`<img src="${q.image}">`:""}
- </div>
- <div class="box-question">
- <p><b>${i+1}.</b> ${q.question}</p>
- ${Object.entries(q.options).map(([k,v],idx)=>`
- <label class="option-item">
- <input type="radio" name="q${i}" value="${k}">
- <span class="option-circle">${idx+1}</span> ${v}
- </label>`).join("")}
- </div>
- </div>`;
- });
- document.querySelectorAll("input[type=radio]").forEach(r=>{
- r.onchange=()=>answers[+r.name.slice(1)]=r.value;
- });
- show(0);
+// ==================== FUNGSI UNIVERSAL ====================
+function kirimKeGoogleSheet(resultData) {
+  fetch(GOOGLE_SHEET_URL, {
+    method: "POST",
+    body: JSON.stringify(resultData),
+    headers: { "Content-Type": "text/plain" },
+    mode: "no-cors"
+  }).catch(err => {
+    console.log("Gagal kirim ke Google Sheet:", err);
+  });
 }
 
-function show(n){
- document.querySelectorAll("audio").forEach(a=>{a.pause();a.currentTime=0});
- document.querySelectorAll(".question-wrapper").forEach((q,i)=>q.classList.toggle("active",i===n));
- current=n;
-}
-document.getElementById("prev").onclick=()=>current>0&&show(current-1);
-document.getElementById("next").onclick=()=>current<questions.length-1&&show(current+1);
+function simpanHasilLokal(resultData) {
+  let allResults = JSON.parse(localStorage.getItem("quizResults") || "[]");
 
-submitTop.onclick=()=>{
- const kosong=answers.findIndex(a=>a===null);
- if(kosong!==-1){alert("Soal "+(kosong+1)+" belum dijawab");show(kosong);return;}
+  const isDuplicate = allResults.some(r =>
+    r.username === resultData.username &&
+    r.kode === resultData.kode &&
+    r.skor === resultData.skor &&
+    r.app === resultData.app &&
+    Math.abs(new Date(r.tanggal) - new Date(resultData.tanggal)) < 60000
+  );
 
- clearInterval(interval);
- quizPage.style.display="none";
- resultPage.style.display="block";
-
- let score=0,html="";
- questions.forEach((q,i)=>{
- const benar=q.answer;
- if(answers[i]===benar) score+=4;
- else html+=`
- <div class="wrong-item">
- <b>Soal ${i+1} salah</b><br>
- Jawaban benar: <span class="correct">${benar}</span><br>
- ${q.explanation||"-"}
- </div>`;
- });
-
- const resultData = {
- username: currentUser,
- kode: currentKode || "-",
- nilai: score,
- tanggal: new Date().toLocaleString('id-ID'),
- app: "latbakor"
- };
-
- let allResults = JSON.parse(localStorage.getItem("quizResults") || "[]");
-
- const isDuplicate = allResults.some(r => 
- r.username === resultData.username &&
- r.kode === resultData.kode &&
- r.nilai === resultData.nilai &&
- r.app === resultData.app &&
- Math.abs(new Date(r.tanggal) - new Date(resultData.tanggal)) < 60000
- );
-
- if (!isDuplicate) {
- allResults.push(resultData);
- localStorage.setItem("quizResults", JSON.stringify(allResults));
- }
-
- resultBox.innerHTML=`
- <h2>Nilai: ${score}</h2>
- ${html||"<p class='correct'>Semua jawaban benar 🎉</p>"}
- <div class="back-btn" onclick="location.reload()">KEMBALI</div>`;
-};
-
-function startTimer(){
- interval=setInterval(()=>{
- timerEl.textContent=String(Math.floor(time/60)).padStart(2,"0")+":"+String(time%60).padStart(2,"0");
- if(--time<0) submitTop.onclick();
- },1000);
+  if (!isDuplicate) {
+    allResults.push(resultData);
+    localStorage.setItem("quizResults", JSON.stringify(allResults));
+    return true;
+  }
+  return false;
 }
 
+// ==================== SCRIPT UTAMA ====================
+document.addEventListener("DOMContentLoaded", () => {
+  const loginPage = document.getElementById("login-page");
+  const quizPage = document.getElementById("quiz-page");
+  const resultPage = document.getElementById("result-page");
+  const btnLogin = document.getElementById("btnLogin");
+  const submitTop = document.getElementById("submitTop");
+  const quizForm = document.getElementById("quiz-form");
+  const timerEl = document.getElementById("timer");
+  const resultBox = document.getElementById("resultBox");
+
+  const validCredentials = {
+    "uus":"123",
+    "user01":"12345",
+    "hanarizka":"Nungkihana24!",
+    "windi":"Windi2000",
+    "rismaya97":"bahasakorea",
+    "sita77":"minyooki",
+    "Aini185":"Doraemon",
+    "Hangeulfei":"studykorea02",
+    "Hamdan106":"Fukuo106",
+    "Heri":"heri99",
+    "Fikrisurya":"464646",
+    "Mutiara2003":"Mutiara14",
+    "wantikas":"200022",
+    "Dininidia":"dininidia11",
+    "kaniarostayuni9":"Kania1313",
+    "Dikisetiawan07":"Diki2709",
+    "Aisyah18":"Aisyah18.",
+    "Rizka2026":"butterfly24",
+    "Zhafif07":"20060722",
+    "koreafan":"hanguk789",
+    "topik2026":"seoul2026",
+    "admin":"admin123"
+  };
+
+  const kodeMapping = {
+    "B12345":"soal1.json",
+    "A09008":"soal2.json",
+    "SAREWAE":"test.json",
+    "W11765":"soal3.json",
+    "H66633":"soal5.json"
+  };
+
+  const BASE = "https://raw.githubusercontent.com/airnetcso/latbakor/main/soal/";
+
+  let questions = [], answers = [], current = 0, time = 3000, interval;
+  let currentUser = "", currentKode = "";
+
+  btnLogin.onclick = () => {
+    const u = document.getElementById("username").value.trim();
+    const p = document.getElementById("password").value.trim();
+    const k = document.getElementById("kode").value.trim().toUpperCase();
+
+    if (validCredentials[u] === p && kodeMapping[k]) {
+      currentUser = u;
+      currentKode = k;
+      loginPage.style.display = "none";
+      quizPage.style.display = "block";
+      loadSoal(kodeMapping[k]);
+      startTimer();
+    } else {
+      alert("Username / Password / Kode salah");
+    }
+  };
+
+  async function loadSoal(file) {
+    questions = await (await fetch(BASE + file)).json();
+    answers = Array(questions.length).fill(null);
+    quizForm.innerHTML = "";
+    questions.forEach((q, i) => {
+      quizForm.innerHTML += `
+        <div class="question-wrapper">
+          <div class="box-passage">
+            ${q.audio ? `<audio controls src="${q.audio}"></audio>` : ""}
+            ${q.image ? `<img src="${q.image}">` : ""}
+          </div>
+          <div class="box-question">
+            <p><b>${i+1}.</b> ${q.question}</p>
+            ${Object.entries(q.options).map(([k,v],idx) => `
+              <label class="option-item">
+                <input type="radio" name="q${i}" value="${k}">
+                <span class="option-circle">${idx+1}</span> ${v}
+              </label>
+            `).join("")}
+          </div>
+        </div>`;
+    });
+    document.querySelectorAll("input[type=radio]").forEach(r => {
+      r.onchange = () => answers[+r.name.slice(1)] = r.value;
+    });
+    show(0);
+  }
+
+  function show(n) {
+    document.querySelectorAll("audio").forEach(a => {a.pause(); a.currentTime=0;});
+    document.querySelectorAll(".question-wrapper").forEach((q,i) => q.classList.toggle("active", i===n));
+    current = n;
+  }
+  document.getElementById("prev").onclick = () => current > 0 && show(current-1);
+  document.getElementById("next").onclick = () => current < questions.length-1 && show(current+1);
+
+  submitTop.onclick = () => {
+    const kosong = answers.findIndex(a => a === null);
+    if (kosong !== -1) {
+      alert("Soal " + (kosong+1) + " belum dijawab");
+      show(kosong);
+      return;
+    }
+
+    clearInterval(interval);
+    quizPage.style.display = "none";
+    resultPage.style.display = "block";
+
+    let score = 0, html = "";
+    questions.forEach((q, i) => {
+      const benar = q.answer;
+      if (answers[i] === benar) score += 4;
+      else html += `
+        <div class="wrong-item">
+          <b>Soal ${i+1} salah</b><br>
+          Jawaban benar: <span class="correct">${benar}</span><br>
+          ${q.explanation || "-"}
+        </div>`;
+    });
+
+    const persentase = ((score / (questions.length * 4)) * 100).toFixed(2);
+
+    // Data dikirim ke Google Sheet
+    const resultData = {
+      username: currentUser,
+      kode: currentKode || "-",
+      app: "latbakor",              // Ganti jadi nama app lain kalau dipakai di app berbeda
+      skor: score,
+      jumlahSoal: questions.length
+    };
+
+    // Simpan lokal + kirim hanya kalau baru
+    const lokalData = {
+      ...resultData,
+      tanggal: new Date().toLocaleString('id-ID')
+    };
+    const berhasilSimpan = simpanHasilLokal(lokalData);
+
+    if (berhasilSimpan) {
+      kirimKeGoogleSheet(resultData);
+    }
+
+    resultBox.innerHTML = `
+      <h2>Nilai: ${score}</h2>
+      <h3>Persentase: ${persentase}%</h3>
+      <p style="color:green;font-weight:bold;">✓ Hasil telah dikirim ke server</p>
+      ${html || "<p class='correct'>Semua jawaban benar 🎉</p>"}
+      <div class="back-btn" onclick="location.reload()">KEMBALI</div>
+    `;
+  };
+
+  function startTimer() {
+    interval = setInterval(() => {
+      timerEl.textContent = String(Math.floor(time/60)).padStart(2,"0") + ":" + String(time%60).padStart(2,"0");
+      if (--time < 0) submitTop.onclick();
+    }, 1000);
+  }
 });
 </script>
 </body>
 </html>
-
