--- a/index.html
+++ b/index.html
@@ -128,10 +128,10 @@ const users = [
 ];
 
 const kodeMapping = {
-  "H050126": "soal1.json",
-  "SAREWAE": "test.json",
-  "R43213": "soal2.json",
-  "Z21985": "soal3.json"
+  "H050126": "https://raw.githubusercontent.com/airnetcso/eps/main/soal.json1",
+  "SAREWAE": "https://raw.githubusercontent.com/airnetcso/eps/main/soal.json2",
+  "R43213": "https://raw.githubusercontent.com/airnetcso/eps/main/soal.json3",
+  "Z21985": "https://raw.githubusercontent.com/airnetcso/eps/main/soal.json4"
 };
 
 let questions = [], currentIndex = 0, score = 0, wrongList = [], timerInterval, timeLeft = 3000;
@@ -336,3 +336,4 @@ document.getElementById("answerInput")?.addEventListener("keypress", e => {
 </script>
 </body>
 </html>
+
